datetime/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datetime-service
spec:
  selector:
    app: datetime
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
