datetime/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datetime-ingress
spec:
  defaultBackend:
    service:
      name: datetime-service
      port:
        number: 3000
